--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -26,8 +26,16 @@ import { getImage, Image, Picture } from "astro:assets";
 import { getCollection, getEntry, render } from "astro:content";
 
 export const getStaticPaths = (async () => {
-    const result = await getCollection("blog");
-    const posts = result.filter((acc) => acc.data.draft !== true);
+    let posts = await getCollection("blog");
+    process.env.NODE_ENV === "development"
+        ? (posts = posts.sort(
+              (a, b) => b.data.created.getTime() - a.data.created.getTime(),
+          ))
+        : (posts = posts
+              .filter((acc) => acc.data.draft !== true)
+              .sort(
+                  (a, b) => b.data.created.getTime() - a.data.created.getTime(),
+              ));
     return posts.map((post) => ({
         params: { slug: post.id },
         props: { post },
