--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,7 @@ const defaultOgImage = "../images/arch-rainbow-1920x1080.png";
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
+        <link rel="sitemap" href="/sitemap-index.xml" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link href="https://mastodon.social/@naparajith" rel="me" />
         <meta name="generator" content={Astro.generator} />
