refactor: footer links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@ const year = new Date().getFullYear();
         &copy; {year} by <A
             rel="cc:attributionURL dct:creator"
             property="cc:attributionName"
-            href="https://www.linkedin.com/in/naparajith/"
+            href="https://gravatar.com/naparajithtl"
             target="_blank"
             title={"Author"}
         >
